2006-09-14  Nurdin Premji <npremji@redhat.com>
	
	* StatusWidget.java: Added code to use some of the grid api.

2006-09-14  Yao Qi  <qiyaoltc@cn.ibm.com>

	* observers/SysCallUtilyInfo.java: Get Syscall object from 
	syscallEventInfo.

2006-09-13  Phil Muldoon  <pmuldoon@localhost.localdomain>

	* observers/SysCallUtilyInfo.java (getCallInfoFromSyscall): Convert to 
	use StringBuffers. Format code.
	(getReturnInfoFromSyscall): Ditto.

2006-09-13  Phil Muldoon  <pmuldoon@redhat.com>

	* StatusWidget.java (TimelineAction.execute): Cleaned hashmap
	lookup.
	(buildEventViewer): Use constants BACKGROUND_COLOR and
	INTERVAL
	
2006-09-13  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java: Changed clones to be colored blue.
	Added a call to change the size of a marker to 6 (default is 30 
	so you'll know its huge).

2006-09-13  Phil Muldoon  <pmuldoon@redhat.com>

	* ObserversMenu.java (setCurrentTask): Convert hash lookup key
	to observer.getName().
	(setCurrentProc): Ditto.
	(removeGuiObject): Ditto.
	(addGuiObject): Ditto.

2006-09-12  Phil Muldoon  <pmuldoon@redhat.com>

	* StatusWidget.java (TimeLine): Build a Hashmap of marker's to
	x-ref on actual observer execution. 

2006-09-11  Andrew Cagney  <cagney@redhat.com>

	* WindowManager.java: Pass just "frysk" to getLogger, work-around.

2006-09-11  Phil Muldoon <pmuldoon@redhat.com>

	* StatusWidget.java: Increase size of legend array.

2006-09-10    <swagiaal@redhat.com>

	* observers/TaskObserverRoot.java: Added handling for addedTo and 
	removedFrom, which just forward the call to the GuiTask (part of fix
	for bz 3190).
	* observers/ObserverRoot.java: Removed onAdded and onRemoved runnables
	and all references.
	* observers/AttachedContinueObserver.java: Removed
	* observers/AttachedResumeObserver.java: Removed
	* observers/AttachedStopObserver.java: Removed
	* observers/DetachedContinueObserver.java: Removed
	* GuiTask.java: Removed observer.onAdded/onRemoved Runnables. This